--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "uskok-validator",
-  "version": "1.0.1",
+  "version": "1.1.0",
   "description": "Simple object validor",
   "main": "dist/index.js",
   "repository": {
@@ -8,7 +8,7 @@
     "type": "git"
   },
   "scripts": {
-    "dev": "nodemon src/index.ts",
+    "dev": "nodemon src/test.ts",
     "build": "tsc"
   },
   "keywords": [
@@ -22,5 +22,7 @@
     "nodemon": "^3.0.2",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.3.3"
-  }
+  },
+  "types": "dist/index.d.ts",
+  "files": ["package.json", "dist", "LICENCE", "README.md"]
 }
